--- a/client/irvinehacks/src/home/profile/profile.css
+++ b/client/irvinehacks/src/home/profile/profile.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
-    grid-gap: 0px;
+    grid-gap: 0;
 }
 
 .div1 { grid-area: 1 / 1 / 2 / 2; }
